fixed desktop image background

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+<main>
 <div class="container">
   <img src="./images/illustration-hero.svg" alt="">
   <h1>Order Summary</h1>
@@ -29,6 +30,7 @@
   <p class="cancel-order">Cancel Order</p>
 
 </div>
+</main>
 
 </body>
 </html>
